<resources>
    <string name="app_name">KunjunginApp</string>
    <string name="back">back</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="destination_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="destination_title">Nama Destinasi</string>
    <string name="distance_to_location">5 km</string>
    <string name="email">Email</string>
    <string name="email_placeholder">Alamat Email</string>
    <string name="favorite">favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_headline">Temukan Destinasi \nWisata Sejarah Terbaik</string>
    <string name="label">label</string>
    <string name="location">Lokasi Destinasi</string>
    <string name="location_name">Place A</string>
    <string name="login">Masuk</string>
    <string name="password">Kata Sandi</string>
    <string name="rating">4.8</string>
    <string name="search">Cari Wisata Sejarah</string>
    <string name="search_bar">Search Bar</string>
    <string name="share">share</string>
    <string name="signup">Daftar</string>
    <string name="splash_background_image">Splash Background Image</string>
    <string name="title_booking">Pemesanan</string>
    <string name="title_detail">Detail Wisata</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_home">Beranda</string>
    <string name="title_profile">Profil</string>
    <string name="to_login">Sudah punya akun? Masuk</string>
    <string name="to_signup">Belum punya akun? Daftar</string>
    <string name="username">Nama Pengguna</string>
    <string name="address_placeholder">Detail Alamat</string>
    <string name="address">Alamat</string>
    <string name="required_field">Tidak boleh dikosongkan</string>
    <string name="select_city">Pilih Kota</string>
    <string name="choose_city_prompt">Tolong pilih salah satu kota</string>
    <string name="hello">Halo</string>
    <string name="exclamation">!</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="setting">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="logo">Logo</string>
    <string name="recommendation_headline">Rekomendasi Untukmu</string>
    <string name="recommendation_desc1">Wisata Sejarah Paling Dekat dengan Tempatmu</string>
    <string name="image">Gambar</string>
    <string name="preference_headline">Pilih Minat Anda</string>
    <string name="preference_desc">Kami akan merekomendasikan tempat wisata sejarah berdasarkan jenis tempat yang Anda pilih.</string>
    <string name="next">Lanjutkan</string>
    <string name="candi">Candi</string>
    <string name="museum">Museum</string>
    <string name="gunung">Gunung</string>
    <string name="rating_example">4.8</string>
    <string name="recommendation_desc2">Wisata Sejarah dengan Rating Tertinggi</string>
    <string name="description">Deskripsi</string>
    <string name="book_tourguide">Pesan Pemandu Wisata</string>
</resources>