<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/light_beige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/light_beige"
            android:contentDescription="@string/back"
            android:paddingHorizontal="15dp"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:paddingTop="7dp"
            android:text="@string/title_detail"
            android:textColor="@color/dark_jungle_green"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@color/light_beige"
            android:contentDescription="@string/share"
            android:paddingHorizontal="15dp"
            android:src="@drawable/share_2" />

        <ImageButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:paddingHorizontal="15dp"
            android:background="@color/light_beige"
            android:contentDescription="@string/favorite"
            android:src="@drawable/heart_fav" />

    </Toolbar>

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="15dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image"
        tools:text="@string/destination_title" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/map_pin"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="15dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_title"
        tools:text="@string/destination_description" />

    <TextView
        android:id="@+id/distance_to_location"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="15dp"
        android:drawableLeft="@drawable/star_filled"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="end"
        android:text="@string/rating"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image" />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="15dp"
        android:paddingTop="10dp"
        android:textSize="16sp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_location"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/book_tourguide"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>