<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/favorite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="24dp"
        android:paddingTop="10dp"
        android:text="@string/title_profile"
        android:textColor="@color/dark_jungle_green"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/light_beige"
        android:elevation="-1dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="25dp"
            android:paddingEnd="8dp"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/exclamation"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/username"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/changeProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/change_profile"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:drawableLeftCompat="@drawable/edit" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/setting"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeProfile"
            app:drawableLeftCompat="@drawable/settings" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/logout"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:drawableLeftCompat="@drawable/log_out" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>