<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <FrameLayout
        android:layout_width="230dp"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/destination_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="1dp"
            android:transitionName="profile"
            android:contentDescription="@string/image"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/location_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rating_example"
            android:drawablePadding="5dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            card_view:drawableLeftCompat="@drawable/star"
            card_view:drawableTint="@color/white" />

    </FrameLayout>
</androidx.cardview.widget.CardView>
